<resources>
    <string name="app_name">EnglishWritingInViews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="counter">%d words entered(the word count for this task is about 35)</string>
    <string name="rules">Read the question above carefully.\n \nGive a detailed answer to this question.\n \nThe answer should be 35 words or more.</string>
    <string name="rules_for_editing">Look at your mistakes.\n \nTry to understand and remember them.\n \nCorrect your text and submit it again.</string>
    <string name="hint_writing">Start typing your story…</string>
    <string name="submit">Submit</string>
    <string name="strick">strick</string>
    <string name="chatbot">chatbot</string>
    <string name="account">account</string>
    <string name="illia_palamarchuk_todelete">Illia Palamarchuk</string>
    <string name="written_texts">%d\nнаписаних текстів</string>
    <string name="active_days">%d\nактивних днів</string>
    <string name="settings">Налаштування</string>
    <string name="answer_example_todelete">My favorite holiday destination is the beautiful island of Bali, Indonesia. What I love most about Bali is its enchanting blend of culture, nature, and tranquility. The lush green rice terraces, pristine beaches, and vibrant coral reefs offer a breathtaking natural landscape to explore. My favorite holiday destination is the beautiful island of Bali, Indonesia. What I love most about Bali is its enchanting blend of culture, nature, and tranquility. The lush green rice terraces, pristine beaches, and vibrant coral reefs offer a breathtaking natural landscape to explore. Moreover, Bali\'s rich cultural heritage, including its traditional dance, art, and rituals, captivates me every time I visit. The warmth and friendliness of the Balinese people create a welcoming atmosphere that makes you feel at home. One of the highlights of Bali is its diverse cuisine, from delicious street food to gourmet restaurants. Exploring the local flavors is always a delightful experience. Bali also provides the perfect balance between relaxation and adventure. Whether I want to meditate in a serene temple or surf on the wild waves, Bali has it all. Overall, Bali\'s unique blend of spirituality, natural beauty, and vibrant culture makes it my favorite holiday destination, and I can\'t help but be drawn back to this paradise every chance I get</string>
    <string name="question_example_todelete">Describe your favorite holiday destination and why you like it.</string>
    <string name="edit">Виправити</string>
    <string name="done">Готово</string>
    <string name="mistakes_example_todelete">1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n1. Помилка така то, спробуйте зробити так то\n</string>
    <string name="logo">Logo</string>
    <string name="learn_writing">Learn writing in English \n It\'s so easy</string>
    <string name="learning_english">Learning a new language can be a challenging journey, but we\'re here to keep you motivated every step of the way.</string>
    <string name="start">Start writing</string>
    <string name="checked_description">"The icon to know if the question was answered "</string>
    <string name="hard">Hard</string>
    <string name="today">Сьогодні</string>
    <string name="unavailable">The internet is not available</string>
    <string name="losing">We are losing the internet connection</string>
    <string name="lost">The internet connection is lost</string>
    <string name="available">The internet is connected</string>
    <string name="default_web_client_id">DEFAULT_ID</string>
    <string name="login_as_guest">Login as guest</string>
    <string name="login_with_google">Login with Google</string>
    <string name="there_are_no_any_answers">¯\\_(ツ)_/¯\nThere are no any answers</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="log_out">Log out</string>
</resources>