<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/size_8dp"
    app:cardCornerRadius="@dimen/size_8dp"
    android:elevation="@dimen/size_4dp"
    app:cardBackgroundColor="@color/cardview_dark_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/question_image_view"
            android:layout_width="@dimen/size_48dp"
            android:layout_height="@dimen/size_48dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/checked_description"
            android:padding="@dimen/size_16dp"
            android:src="@drawable/ic_checked" />

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:ellipsize="end"
            android:textColor="@color/white_text"
            android:padding="@dimen/size_8dp"
            android:lines="1"
            android:text="@string/question_example_todelete"
            android:textSize="@dimen/text_size_16sp" />

        <TextView
            android:id="@+id/difficultyTextView"
            android:layout_width="@dimen/size_60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/hard"
            android:textColor="@color/red_button"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
