<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    tools:context=".presentation.AnsweringQuestionFragment">


    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/white_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="16sp"
        android:text="@string/rules"
        android:textColor="@color/white_text"
        app:layout_constraintEnd_toEndOf="@+id/tvQuestion"
        app:layout_constraintStart_toStartOf="@+id/tvQuestion"
        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

    <EditText
        android:id="@+id/etAnswer"
        android:layout_width="0dp"
        android:layout_height="324dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/multi_line_text_style"
        android:ems="10"
        android:textSize="14sp"
        android:gravity="start|top"
        android:hint="@string/hint_writing"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/white_text"
        android:textColorHint="@color/hint_color"
        android:textCursorDrawable="@drawable/cursor_color"
        app:layout_constraintEnd_toEndOf="@+id/tvRules"
        app:layout_constraintStart_toStartOf="@+id/tvRules"
        app:layout_constraintTop_toBottomOf="@+id/tvRules"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="12sp"
        android:textColor="@color/white_text"
        android:text="@string/counter"
        app:layout_constraintStart_toStartOf="@+id/etAnswer"
        app:layout_constraintTop_toBottomOf="@+id/etAnswer" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/red_button"
        android:text="@string/submit"
        android:textColor="@color/white_text"
        app:layout_constraintEnd_toEndOf="@+id/etAnswer"
        app:layout_constraintStart_toStartOf="@+id/etAnswer"
        app:layout_constraintTop_toBottomOf="@+id/tvCounter" />


</androidx.constraintlayout.widget.ConstraintLayout>