<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_background"
    android:fillViewport="true"
    tools:context=".presentation.account.AccountFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/size_150dp"
            android:layout_height="@dimen/size_150dp"
            android:layout_marginTop="@dimen/size_32dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageView" />

        <TextView
            android:id="@+id/tv_nick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="center"
            android:text="@string/illia_palamarchuk_todelete"
            android:textColor="@color/white_text"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

        <TextView
            android:id="@+id/tv_written_texts"
            android:layout_width="@dimen/size_128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="center"
            android:text="@string/written_texts"
            android:textColor="@color/white_text"
            app:layout_constraintEnd_toStartOf="@+id/tv_active_days"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick" />

        <TextView
            android:id="@+id/tv_active_days"
            android:layout_width="@dimen/size_128dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:gravity="center"
            android:text="@string/active_days"
            android:textColor="@color/white_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_written_texts"
            app:layout_constraintTop_toBottomOf="@+id/tv_nick" />

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_16dp"
            android:backgroundTint="@color/grey_cards"
            android:text="@string/settings"
            android:textColor="@color/white_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_written_texts" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_8dp"
            android:layout_marginEnd="@dimen/size_8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings"
            tools:listitem="@layout/written_texts_item_layout" />


        <TextView
            android:id="@+id/tv_empty_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_128dp"
            android:layout_weight="1"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/there_are_no_any_answers"
            android:textColor="@color/white_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>

