<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAnswer"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:elevation="@dimen/size_8dp"
        app:cardBackgroundColor="@color/grey_cards"
        app:cardCornerRadius="@dimen/size_8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_day_of_writing">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/size_8dp">


            <TextView
                android:id="@+id/tv_question_in_insights"
                android:layout_width="@dimen/size_0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/size_8dp"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/question_example_todelete"
                android:textColor="@color/white_text"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_difficulty_in_insights"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_difficulty_in_insights"
                android:layout_width="@dimen/size_60dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hard"
                android:textColor="@color/red_button"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_text_in_insights"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4dp"
                android:ellipsize="end"
                android:lines="5"
                android:text="@string/answer_example_todelete"
                android:textColor="@color/not_primary_text"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/tv_question_in_insights"
                app:layout_constraintTop_toBottomOf="@+id/tv_question_in_insights" />

            <RatingBar
                android:id="@+id/rating_bar_in_insights"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4dp"
                android:progressTint="@color/yellow"
                android:rating="3.5"
                app:layout_constraintStart_toStartOf="@+id/tv_text_in_insights"
                app:layout_constraintTop_toBottomOf="@+id/tv_text_in_insights" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_day_of_writing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8dp"
        android:layout_marginTop="@dimen/size_8dp"
        android:text="@string/today"
        android:textColor="@color/white_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>